--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,25 @@
   .card {
     padding: 2rem;
     border-radius: 1rem;
+
+    .check-circle {
+      background: #2fb380;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin: 0 auto;
+      margin-bottom: 32px;
+      position: relative;
+
+      i {
+        font-size: 30px;
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
 
   .warning {
