--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    &.wide {
+      width: 880px;
+    }
+    .midsp {
+      margin: 45px 0;
+    }
   }
 
   .logo {
@@ -41,25 +47,6 @@
   .card {
     padding: 2rem;
     border-radius: 1rem;
-
-    .check-circle {
-      background: #2fb380;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      margin: 0 auto;
-      margin-bottom: 32px;
-      position: relative;
-
-      i {
-        font-size: 30px;
-        color: #fff;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
   }
 
   .warning {
@@ -72,4 +59,43 @@
     border-radius: 8px;
     padding: 6px 12px;
   }
+
+  .progress.strength {
+    height: 8px;
+  }
+
+  .qr {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .arrow-circle {
+    background: #444;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    i {
+      font-size: 24px;
+      position: absolute;
+      color: #FFF;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
