--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,30 @@
   bottom: 0;
   padding-top: 70px;
 
+  .zero-state {
+    width: 280px;
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+    img {
+      filter: invert(1);
+      opacity: 0.3;
+      width: 100%;
+      margin-bottom: 48px;
+    }
+    h2, p {
+      opacity: 0.8;
+    }
+    button {
+      margin-top: 16px;
+      opacity: 0.9;
+    }
+  }
+
   .socket {
     position: absolute;
     top: 50%;
@@ -18,6 +42,12 @@
     position: relative;
     height: 180px;
     overflow: hidden;
+
+    .btn-close {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+    }
 
     .info {
       position: absolute;
