--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,24 @@
+.p-4-5 {
+  padding: 2rem !important;
+}
+
+.embed-container {
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
+  height: 100%;
+
+  iframe,
+  object,
+  embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .dashboard {
   background: #eee;
   position: fixed;
